# ansible-runner-service

./: .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 18eef6f316c3_create_jobs_table.py  2a02b53c9f3e_add_source_target_column.py  7cce96bc004a_create_clients_table.py  add_source_columns_to_jobs.py  f46ac9869079_change_inventory_to_json_add_options_.py
config/: git_providers.example.yaml
docker/: init-test-db.sql
docs/: code-structure.html  jobrequest-redesign-quiz.md  kubernetes-deployment.md  usage-guide.md
docs/plans/: 2026-01-15-ansible-api-service-design.md  2026-01-20-minimal-vertical-slice-design.md  2026-01-20-minimal-vertical-slice-plan.md  2026-01-21-async-job-queue-design.md  2026-01-21-async-job-queue-plan.md  2026-01-24-database-persistence-design.md  2026-01-24-database-persistence-plan.md  2026-01-29-git-playbook-source-design.md  2026-01-29-git-playbook-source-plan.md  2026-02-05-inventory-inline-hosts-analysis.md  2026-02-06-jobrequest-redesign-design.md  2026-02-06-jobrequest-redesign-plan.md  2026-02-07-unified-source-design.md  2026-02-08-unified-source-plan.md  (+7 more)
playbooks/: hello.yml
tests/: conftest.py  test_api.py  test_auth.py  test_client_repository.py  test_database.py  test_db_integration.py  test_docs.py  test_git_config.py  test_git_service.py  test_health.py  test_integration.py  test_job_store.py  test_models.py  test_queue.py  test_queue_integration.py  test_recovery.py  test_repository.py  test_runner.py  test_schemas.py  test_worker.py
(+14 files in other folders)
